# http-llm-server

./: .gitignore  .gitmodules  .prettierrc  LICENSE  PLAN.md  README.md  main.py  plan.md  pyproject.toml  server.py
.cursor/rules/: project-standards.mdc
.github/workflows/: ci.yml  copilot-setup-steps.yml  one-shot-contributor.yml  pr-one-shot-test.yml
examples/: chat_app_prompt.txt
examples/chat_app/: prompt.md
examples/data_dashboard/: prompt.md
examples/default_info_site/: prompt.md
examples/simple_blog/: prompt.md
examples/simple_blog/data/posts/: 2024-01-01-hello-world.json  2024-01-01-hello-world.md  2024-01-15-the-power-of-llms.json  2024-01-15-the-power-of-llms.md  2024-02-10-web-development-trends.md
examples/simple_todo/: prompt.md
src/: app.py  config.py  dspy_metrics.py  dspy_module.py  legacy_server.py  local_tools.py  logging_config.py  server.py  training_data.py
src/prompts/: debug.md  error.md  orchestrator.md  system.md
src/server/: agent_setup.py  conversation.py  core_services.py  errors.py  local_tools.py  mcp_session.py  middleware.py  models.py  parsing.py  session.py  streaming.py  web_resource.py
tests/: conftest.py  test_integration.py
